archetect-minijinja/tests/snapshots/test_templates__vm@err_extends_actually_not.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "before\n{% if not_true %}\n  {% extends \"something.html\" %}\n{% endif %}\nand after"
info:
  not_true: false
input_file: archetect_minijinja/tests/inputs/err_extends_actually_not.txt
---
before

and after

